--- a/public/about.html
+++ b/public/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Not Found So Far | Hakkında</title>
+    <title id="page-title">Not Found So Far | Hakkında</title>
     <link rel="icon" href="images/Not Found So Far Icon.png">
     <meta name="description" content="Kayıp medya arşivi hakkında bilgiler">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -636,6 +636,7 @@
                 "faq3-question": "Nasıl katkıda bulunabilirim?",
                 "faq3-answer": "'Gönderi Yap' sayfamızdan bilgi ekleyebilir, sosyal medya hesaplarımızda paylaşımlar yapabilir veya bağış yaparak destek olabilirsiniz.",
                 "rights": "Tüm hakları saklıdır.",
+                "page-title": "Not Found So Far | Hakkında",
                 "our-team-alt": "Ekibimiz"
             },
             en: {
@@ -673,6 +674,7 @@
                 "faq3-question": "How can I contribute?",
                 "faq3-answer": "You can add information from our 'Submit' page, make posts on our social media accounts or support us by making a donation.",
                 "rights": "All rights reserved.",
+                "page-title": "Not Found So Far | About",
                 "our-team-alt": "Our Team"
             }
         };
