--- a/public/about.html
+++ b/public/about.html
@@ -634,7 +634,7 @@
     <footer>
         <div class="container">
             <div class="footer-bottom">
-                <p>&copy; 2023 Not Found So Far. <span data-i18n="rights">Tüm hakları saklıdır.</span></p>
+                <p>&copy; 2025 Not Found So Far. <span data-i18n="rights">Tüm hakları saklıdır.</span></p>
             </div>
         </div>
     </footer>
@@ -742,6 +742,7 @@
         function changeLanguage(lang) {
             userPreferences.language = lang;
             localStorage.setItem('language', lang);
+            document.getElementById('page-title').text
             document.documentElement.lang = lang;
             
             // Tüm çevirilebilir elementleri güncelle
