--- a/public/about.html
+++ b/public/about.html
@@ -632,9 +632,9 @@
     </main>
 
     <footer>
-        <div class="container">
-            <div class="footer-bottom">
-                <p>&copy; 2025 Not Found So Far. <span data-i18n="rights">Tüm hakları saklıdır.</span></p>
+        <div class="footer-bottom">
+                <p>&copy; 2023 LostMediaArşiv. <span data-i18n="rights">Tüm hakları saklıdır.</span></p>
+                <p data-i18n="non-profit">Bu site kâr amacı gütmemektedir.</p>
             </div>
         </div>
     </footer>
