--- a/public/about.html
+++ b/public/about.html
@@ -581,7 +581,7 @@
             <div class="contact-section">
         <h2><i class="fas fa-envelope"></i> <span data-i18n="contact-us">Bize Ulaşın</span></h2>
         <div class="contact-form">
-            <form id="contactForm" action="https://formspree.io/f/your-form-id" method="POST">
+            <form id="contactForm" action="https://formspree.io/f/mqapdoaw" method="POST">
                 <div class="form-group">
                     <label for="name" data-i18n="form-name">Adınız</label>
                     <input type="text" id="name" name="name" required>
