--- a/public/index.html
+++ b/public/index.html
@@ -253,7 +253,7 @@
                 </div>
                 <div class="footer-col">
                     <h4><i class="fas fa-envelope"></i> <span data-i18n="contact-us">Bize Ulaşın</span></h4>
-                    <p><i class="fas fa-envelope"></i> lostmedia@ornekmail.com</p>
+                    <p><i class="fas fa-envelope"></i> notfoundsofar@gmail.com</p>
                     <div class="social-links">
                         <a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
                         <a href="#" title="Discord"><i class="fab fa-discord"></i></a>
@@ -263,7 +263,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2023 LostMediaArşiv. <span data-i18n="rights">Tüm hakları saklıdır.</span></p>
+                <p>&copy; <script>var yıl = new Date().getFullYear(); document.write(yıl);</script> Not Found So Far <span data-i18n="rights">Tüm hakları saklıdır.</span></p>
                 <p data-i18n="non-profit">Bu site kâr amacı gütmemektedir.</p>
             </div>
         </div>
