--- a/public/about.html
+++ b/public/about.html
@@ -647,17 +647,17 @@
                 "categories": "Kategoriler",
                 "submit": "Gönderi Yap",
                 "about": "Hakkında",
-                "search": "Medya ara...",
+                "search": "Medya Ara...",
                 "dark-theme": "Karanlık Tema",
                 "light-theme": "Aydınlık Tema",
                 "site-title": "So Far",
                 "site-subtitle": "Kaybolan, Unutulan ve Nadir Medya İçeriklerinin Arşivi..",
                 "hero-title": "Hakkımızda",
-                "hero-subtitle": "Kayıp medya kültürünü koruma misyonumuz",
+                "hero-subtitle": "Kayıp Medya Kültürünü Koruma Misyonumuz",
                 "who-we-are": "Biz Kimiz?",
                 "about-text-1": "Not Found So Far, 2025 yılında medya arkeolojisine gönül veren bir ekip tarafından kuruldu. Amacımız, unutulmaya yüz tutmuş veya tamamen kaybolmuş medya içeriklerini belgelemek ve bu kültürel mirası gelecek nesillere aktarmak.",
                 "our-mission": "Misyonumuz",
-                "about-text-2": "Kayıp medya avcıları, araştırmacılar ve meraklılar için güvenilir bir arşiv oluşturuyoruz. Her bir parçanın kültürel değerini korurken, etik ve yasal sınırlar içinde bu içerikleri erişilebilir kılıyoruz.",
+                "about-text-2": "Kayıp Medya Avcıları, Araştırmacılar ve Meraklılar için güvenilir bir arşiv oluşturuyoruz. Her bir parçanın kültürel değerini korurken, etik ve yasal sınırlar içinde bu içerikleri erişilebilir kılıyoruz.",
                 "our-team": "Ekibimiz",
                 "team-2023": "2025 Ekibimiz",
                 "team-desc": "Not Found So Far'i Mümkün Kılan Değerli Ekip Üyelerimiz:",
